--- a/gk.html
+++ b/gk.html
@@ -10,6 +10,7 @@
       margin: 0;
       background-color: #f5f7fa;
     }
+    /* Header & Navigation */
     header {
       background-color: #004080;
       color: white;
@@ -25,6 +26,7 @@
       font-size: 1.8rem;
       font-weight: bold;
     }
+    /* Menu styles for hamburger (always visible) */
     ul.menu {
       list-style: none;
       display: none;
@@ -34,7 +36,6 @@
       right: 20px;
       background: #004080;
       border-radius: 5px;
-      box-shadow: 0 2px 10极速版 (but actually, use the correct code below)
       box-shadow: 0 2px 10px rgba(0,0,0,0.2);
       padding: 10px 0;
       margin: 0;
@@ -59,9 +60,6 @@
       cursor: pointer;
       background: none;
       border: none;
-      padding: 极速版 (but actually, use the correct code below)
-      background: none;
-      border: none;
       padding: 0;
     }
     .hamburger div {
@@ -70,6 +68,7 @@
       background: white;
       margin: 4px 0;
     }
+    /* Main Content */
     main {
       display: flex;
       flex-wrap: wrap;
@@ -97,14 +96,14 @@
     h2 {
       color: #004080;
     }
+    /* Footer */
     footer {
-      background-color: #004极速版 (but actually, use the correct code below)
       background-color: #004080;
       color: white;
       text-align: center;
-      padding: 20极速版 (but actually, use the correct code below)
       padding: 20px;
     }
+    /* New Quiz Section Styles */
     .quiz-list {
       display: flex;
       flex-wrap: wrap;
@@ -128,6 +127,7 @@
     .quiz-card:hover {
       background-color: #125ca4;
     }
+    /* Button group styles */
     .d-flex {
       display: flex;
       align-items: center;
@@ -142,7 +142,7 @@
 <header>
   <nav>
     <div class="logo">IR-LDCE</div>
-    <script src="https://www.gstatic.com/firebasejs/9.23.极速版 (but actually, use the correct code below)
+    <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
     <script>
@@ -174,12 +174,9 @@
     <div class="d-flex align-items-center">
       <a href="login.html" id="loginLink" class="btn btn-sm btn-white-black me-3">Login</a>
       <button id="logoutButton" class="btn btn-sm btn-white-black me-3" style="display: none;">Logout</button>
-      <a href="dashboard.html极速版 (but actually, use the correct code below)
-      <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn极速版 (but actually, use the correct code below)
       <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
     </div>
     <button class="hamburger" id="hamburger">
-      <极速版 (but actually, use the correct code below)
       <div></div>
       <div></div>
       <div></div>
@@ -197,11 +194,12 @@
   </nav>
 </header>
 
+<!-- Your main content goes here -->
 <main>
   <div class="content">
     <div class="card">
       <h2>General Knowledge</h2>
-      <p>This section is for general knowledge quizzes and updates.</p>
+      <p>TThis section is for general knowledge quizzes and updates.</p>
     </div>
     <!-- Add your quiz cards or other content here -->
   </div>
@@ -214,6 +212,7 @@
   &copy; 2025 IR-LDCE. All Rights Reserved.
 </footer>
 
+<!-- Auth State Handling -->
 <script>
   const auth = firebase.auth();
   const loginLink = document.getElementById("loginLink");
@@ -221,6 +220,7 @@
   const dashboardLink = document.getElementById("dashboardLink");
   const mobileDashboardLink = document.getElementById("mobileDashboardLink");
 
+  // Listen for auth state changes
   auth.onAuthStateChanged((user) => {
     if (user) {
       loginLink.style.display = "none";
@@ -229,14 +229,13 @@
       mobileDashboardLink.style.display = "inline";
     } else {
       loginLink.style.display = "inline";
-      logoutButton.style.display = "极速版 (but actually, use the correct code below)
-      loginLink.style.display = "inline";
       logoutButton.style.display = "none";
       dashboardLink.style.display = "none";
       mobileDashboardLink.style.display = "none";
     }
   });
 
+  // Handle logout
   logoutButton.addEventListener("click", () => {
     auth.signOut().then(() => {
       console.log("User signed out");
@@ -247,6 +246,7 @@
 </script>
 
 <script>
+  // Toggle menu on hamburger click
   document.getElementById('hamburger').addEventListener('click', function() {
     document.getElementById('navMenu').classList.toggle('active');
   });
