--- a/establishment.html
+++ b/establishment.html
@@ -23,9 +23,11 @@
       align-items: center;
     }
     .logo {
-      font-size: 1.8rem;
-      font-weight: bold;
-    }
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+}
     /* Menu styles for hamburger (always visible) */
     ul.menu {
       list-style: none;
@@ -141,7 +143,7 @@
 
 <header>
   <nav>
-    <div class="logo">IR-LDCE</div>
+    <a href="index.html" class="logo">IR-LDCE</a>
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
