--- a/pyq-quizzes.html
+++ b/pyq-quizzes.html
@@ -26,9 +26,11 @@
     }
 
     .logo {
-      font-size: 1.8rem;
-      font-weight: bold;
-    }
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+}
 
     ul.menu {
       list-style: none;
@@ -163,7 +165,7 @@
 
 <header>
   <nav>
-    <div class="logo">IR-LDCE</div>
+    <a href="index.html" class="logo">IR-LDCE</a>
     <!-- Firebase SDK (Make sure to include this in your page) -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
