--- a/quiz-history.html
+++ b/quiz-history.html
@@ -26,9 +26,11 @@
     }
 
     .logo {
-      font-size: 1.8rem;
-      font-weight: bold;
-    }
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+}
 
     ul.menu {
       list-style: none;
@@ -275,7 +277,7 @@
 
   <header>
     <nav>
-      <div class="logo">IR-LDCE</div>
+      <a href="index.html" class="logo">IR-LDCE</a>
       <div class="d-flex align-items-center">
         <a href="login.html" id="loginLink" class="btn-white-black me-3">Login</a>
         <button id="logoutButton" class="btn-white-black" style="display: none;">Logout</button>
